[package]
name = "rbq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.5", features = ["json"] }
dashmap = "5.2"
lettre = { version = "0.10.3", features = ["tokio1-native-tls"] }
ricq = { path = "ricq/ricq"}
ricq-axum-api = { path = "ricq/examples/ricq-axum-api"}
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
